--- a/q2.html
+++ b/q2.html
@@ -53,7 +53,7 @@
 			</tr>
 		<tr>
 			<td><label>
-  <input type="radio" name="archetypes" value="5" checked>
+  <input type="radio" name="leaderships" value="5" checked>
   <img src="images/__v2-vermijdend.png" width="200" height="150">
 				<h2>Vermijdend (wantrouwend en terugtrekkend)</h2>
 </label></td>
