--- a/q7.html
+++ b/q7.html
@@ -39,6 +39,7 @@
 		for(var i=1; i<=12; i++) 
 		{
 			var AnswerB = getCookie("MTTQ" + i.toString());	
+			WriteResults();
 			
 			if(i==1){
 				Question1Answer=AnswerB;
