--- a/q7.html
+++ b/q7.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>	
-<h1>Een korte analyse op basis van de antwoorden die je hebt ingevuld:</h1>
+<h1>Je hebt de volgende antwoorden ingevuld:</h1>
 	<h2>
 		<script type = "text/javascript">
 		var Question1Answer = 0;
